// Vitest Snapshot v1

exports[`Testing MultipleCustomHooks.tsx > it should show correctly 1`] = `
<div>
  <h1>
    Breaking Bad Quotes
  </h1>
  <hr />
  <div
    class="alert alert-info text-center"
  >
    Loading...
  </div>
  <button
    class="btn btn-primary"
  >
    Next Quote
  </button>
</div>
`;

exports[`Testing MultipleCustomHooks.tsx > it should show information 1`] = `
<div>
  <h1>
    Breaking Bad Quotes
  </h1>
  <hr />
  <blockquote
    class="blockquote text-right"
  >
    <p
      class="blockquote-body"
    >
      typescript
    </p>
    <footer
      class="blockquote-footer"
    >
      Francisco
    </footer>
  </blockquote>
  <button
    class="btn btn-primary"
  >
    Next Quote
  </button>
</div>
`;
